# dictation-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci-cd.yml  release.yml
docs/: ARCHITECTURE.md  BUILD_AND_RELEASE.md  LICENSES.md  LLM_SETUP_AND_USAGE.md  SETTINGS_AND_LOGGING.md
resources/settings_window/: app.js  index.html  styles.css
src/: app.rs  audio.rs  autostart.rs  hotkey.rs  lib.rs  llm.rs  logging.rs  main.rs  runtime_flash.rs  settings.rs  tray.rs
src/app/: constants.rs  mod.rs  positioning.rs  render.rs  state.rs  workers.rs
src/settings_window/: bridge.rs  mod.rs  window.rs
src/settings_window/bridge/: config.rs  lib.rs  mod.rs
src/settings_window/bridge/endpoints/: mod.rs  settings_get_all.rs  settings_get_start_on_login.rs  settings_get_transcription.rs  settings_open_about_external_url.rs  settings_open_about_logs_dir.rs  settings_reset_defaults.rs  settings_update_hotkey.rs  settings_update_logging.rs  settings_update_start_on_login.rs  settings_window_ready.rs
src/settings_window/bridge/features/: mod.rs  settings_concat.rs  settings_get_about_logs_dir.rs  settings_get_all.rs  settings_get_logging.rs  settings_get_start_on_login.rs  settings_ping.rs  settings_update_transcription.rs
tests/: app_tests.rs  audio_tests.rs  tray_tests.rs
ui/settings-window/: index.html  package.json  tailwind.config.ts  vite.config.ts
ui/settings-window/scripts/: sync-to-resources.mjs
ui/settings-window/src/: App.tsx  index.css  ipc.ts
ui/settings-window/src/types/: settings.ts
(+9 files in other folders)
