[package]
name = "dictation"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.15"
eframe = "0.27"
hound = "3.5"
tempfile = "3.10"
rdev = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tray-icon = "0.19"
image = { version = "0.25", default-features = false, features = ["png"] }
winit = "0.30"
single-instance = "0.3"
directories = "5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
transcribe-rs = { version = "0.3", features = ["onnx", "ort-cuda", "ort-rocm", "ort-directml", "ort-coreml"]}
arboard = "3"
enigo = "0.2"
active-win-pos-rs = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "std"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"